# maestro-flow

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/skills/maestro-run/: SKILL.md
.antigravity/commands/: maestro-run.md  maestro-spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: agents.yaml
agents/prompts/: architect.md  debugger.md  dev.md  pm.md  reviewer.md  tester.md
docs/: MVP_definition.md  P0_P1_implementation.md  P3_rollback.md  P4_知识库_提示词版本化_策略门禁.md  P5_策略插件化_与PR策略明细.md  P6_执行闭环_自动改代码_自动测试_自动修复.md  codex_integration_roadmap.md  real_world_regression_samples.md  release_checklist.md  release_regression_checklist.md  support_matrix.md  validated_setups.md
integrations/antigravity/: README.md
integrations/antigravity/.antigravity/commands/: maestro-spec.md
policies/: no_todo.py
scripts/: maestro.ps1
src/maestro_flow/: __main__.py  ci_ops.py  cli.py  config.py  contracts.py  executor.py  git_ops.py  integrations.py  knowledge_base.py  llm.py  mock_data.py  orchestrator.py  policy_gate.py  prompting.py  providers.py  sync_back_ops.py
templates/: pr_template.md
tests/: conftest.py  test_ci_ops.py  test_cli_json_output.py  test_config.py  test_execution_loop.py  test_executor.py  test_integrations.py  test_knowledge_base.py  test_orchestrator.py  test_policy_gate.py  test_prompting.py  test_providers.py  test_release_smoke.py  test_sync_back_ops.py
(+6 files in other folders)
